@startuml
!include style.puml
skinparam arrowThickness 1.1
skinparam arrowColor LOGIC_COLOR
skinparam classBackgroundColor LOGIC_COLOR

abstract class "{abstract}\nCommand" as Command
class LinkCollaborativeCommand
class LinkMeetingCommand
abstract class "{abstract}\nLinkCommand" as LinkCommand

Command <|-- LinkCommand
LinkCommand <|-- LinkCollaborativeCommand
LinkCommand <|-- LinkMeetingCommand

@enduml
